Update divider color

--- a/angular/theme.scss
+++ b/angular/theme.scss
@@ -115,11 +115,11 @@ $pxb-blue-theme: pxb-light-theme($pxb-blue-primary, $pxb-blue-accent, $pxb-blue-
                 secondary-text: map-get($pxb-black, 200),
                 hint-text: map-get($pxb-gray, 300),
                 base: map-get($pxb-white, 50),
-                divider: $light-dividers,
-                dividers: $light-dividers,
-                disabled: rgba(123, 131, 135, 0.36),
+                divider: rgba(map-get($pxb-black, 200), .36),
+                dividers: rgba(map-get($pxb-black, 200), .36),
+                disabled: rgba(map-get($pxb-black, 300), .36),
                 disabled-button: rgba(white, 0.3),
-                disabled-text: rgba(123, 131, 135, 0.36),
+                disabled-text: rgba(map-get($pxb-black, 300), .36),
                 elevation: map-get($pxb-darkBlack, 900),
                 icon: map-get($pxb-black, 50),
                 icons: map-get($pxb-black, 50),
