--- a/angular/_darkTheme.scss
+++ b/angular/_darkTheme.scss
@@ -154,8 +154,26 @@
             }
         }
     }
+
+    .mat-button-toggle .mat-button-toggle-button {
+        border-color: map-get($pxb-black, 200);
+        background-color: map-get($pxb-black, 900);
+        color: map-get($pxb-black, 200);
+        &:hover {
+            background-color: rgba(map-get($pxb-black, 50), 0.1);
+        }
+    }
+    .mat-button-toggle-checked .mat-button-toggle-button {
+        background-color: rgba(0, 123, 193, 0.36);
+        color: map-deep-get($overrides, primary, main);
+        &:hover {
+            background-color: rgba(128, 189, 224, 0.36);
+        }
+    }
+
     .mat-raised-button.mat-accent,
-    .mat-flat-button.mat-accent {
+    .mat-flat-button.mat-accent,
+    .mat-button-toggle-button[color='primary'] {
         color: map-get($pxb-white, 50);
         background-color: map-get($pxb-lightBlue, 500);
     }
